--- a/Curso_de_logica_de_programacao_explore_funcoes_e_listas/js-curso-2-desafio_1/index.html
+++ b/Curso_de_logica_de_programacao_explore_funcoes_e_listas/js-curso-2-desafio_1/index.html
@@ -11,10 +11,10 @@
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
-        <button onclick="" class="button">Soma</button>
+        <button onclick="buttonConsoleClicked()" class="button">Console</button>
+        <button onclick="buttonAlertClicked()" class="button">Alert</button>
+        <button onclick="buttonPromptClicked()" class="button">Prompt</button>
+        <button onclick="buttonSumClicked()" class="button">Soma</button>
     </main>
 
       <script src="app.js"></script>
