--- a/Praticando_logica_de_programacao_challenge_amigo_secreto/challenge-amigo-secreto_pt-main/index.html
+++ b/Praticando_logica_de_programacao_challenge_amigo_secreto/challenge-amigo-secreto_pt-main/index.html
@@ -20,15 +20,15 @@
         <section class="input-section">
             <h2 class="section-title">Digite o nome dos seus amigos</h2>
             <div class="input-wrapper">
-                <input type="text" id="amigo" class="input-name" placeholder="Digite um nome">
-                <button class="button-add" onclick="adicionarAmigo()">Adicionar</button>
+                <input type="text" id="friend" class="input-name" placeholder="Digite um nome">
+                <button class="button-add" onclick="addFriend()">Adicionar</button>
             </div>
            
             <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
 
             <div class="button-container">
-                <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
+                <button class="button-draw" onclick="drawFriend()" aria-label="Sortear amigo secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
