--- a/Praticando_logica_de_programacao_challenge_amigo_secreto/challenge-amigo-secreto_pt-main/index.html
+++ b/Praticando_logica_de_programacao_challenge_amigo_secreto/challenge-amigo-secreto_pt-main/index.html
@@ -24,8 +24,8 @@
                 <button class="button-add" onclick="addFriend()">Adicionar</button>
             </div>
            
-            <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
-            <ul id="resultado" class="result-list" aria-live="polite"></ul>
+            <ul id="listFriends" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
+            <ul id="result" class="result-list" aria-live="polite"></ul>
 
             <div class="button-container">
                 <button class="button-draw" onclick="drawFriend()" aria-label="Sortear amigo secreto">
