--- a/Praticando_logica_de_programacao_challenge_amigo_secreto/challenge-amigo-secreto_pt-main/index.html
+++ b/Praticando_logica_de_programacao_challenge_amigo_secreto/challenge-amigo-secreto_pt-main/index.html
@@ -27,12 +27,17 @@
             <ul id="listFriends" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
             <ul id="result" class="result-list" aria-live="polite"></ul>
 
-            <div class="button-container">
+            <div class="button-group">
                 <button class="button-draw" onclick="drawFriend()" aria-label="Sortear amigo secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
+                <button class="button-draw" onclick="renewGame()" aria-label="Recomeçar o jogo amigo secreto">
+                    <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
+                    Recomeçar o sorteio
+                </button>
             </div>
+
         </section>
     </main>
 
