--- a/Curso_de_HTML_e_CSS_ambientes_de_desenvolvimento_estrutura_de_arquivos_e_tags/portifolio/index.html
+++ b/Curso_de_HTML_e_CSS_ambientes_de_desenvolvimento_estrutura_de_arquivos_e_tags/portifolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,24 @@
     <title>Portifólio</title>
 </head>
 <body>
-    <h1>Isso é um título</h1>
-    <p>Isso é um parágrafo</p>
-    <img src=imghtml-logo-main/g alt="Logo do HTML 5">
+    <header></header>
+    <main>
+        <h1>
+            Eleve seu negócio digital a outro nível <strong>
+                                                        com um Front-end de qualidade!
+                                                    </strong>
+        </h1>
+        <p>
+            Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+        </p>
+        <a href="https://www.instagram.com/">
+            Instagram
+        </a>
+        <a href="https://github.com/renato-wessmer/Alura_Next_One">
+            Github
+        </a>
+        <img src="./img/joana-santos-programando.png" alt="Foto da Joana Santos programando">
+    </main>
+    <footer></footer>
 </body>
 </html>
