--- a/Curso_de_HTML_e_CSS_ambientes_de_desenvolvimento_estrutura_de_arquivos_e_tags/desafio_inicial_2/index.html
+++ b/Curso_de_HTML_e_CSS_ambientes_de_desenvolvimento_estrutura_de_arquivos_e_tags/desafio_inicial_2/index.html
@@ -2,10 +2,29 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen">
+    <title>Meu portifólio</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Menu ou Logotipo -->
+    </header>
+    <main>
+    <h1>Eleve seu negócio digital a outro nível 
+        <strong>
+            com um Front-end de qualidade!
+        </strong>
+    </h1>
+    <p>Olá! Sou Renato Wéssmrėr, desenvolvedor front-end. Ajudo pequenos negócios a crescer no digital. Vamos conversar?</p>
+    <!-- Botões e Imagem -->
+    <button href="https://instagram.com/seuusuario">Instagram</button>
+    <button href="https://github.com/seuusuario">Github</button>
+    <img src="caminho-para-sua-imagem.jpg" alt="Desenvolvedor front-end Renato Wéssmrėr">
+    </main>
+    <footer>
+        <!-- Informações de Contato ou Direitos Autorais -->
+    </footer>
 </body>
 </html>
