--- a/Curso_de_HTML_e_CSS_classes_posicionamento_e_flexbox/portifolio/index.html
+++ b/Curso_de_HTML_e_CSS_classes_posicionamento_e_flexbox/portifolio/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>
-            Eleve seu negócio digital a outro nível 
-            <strong class="titulo-destaque">com um Front-end de qualidade!
-            </strong></h1>
-            <p>Olá! Sou Joana Santos, desenvolvedora 
-            Front-end com especialidade em <strong>React, HTML e
-            CSS</strong>. Ajudo pequenos negócios e designers a 
-            colocarem em prática boas ideias. Vamos 
-            conversar?</p>
-            <a href="https://instagram.com/rafaballerini">Instagram</a>
-            <a href="https://github.com/guilhermeonrails">GitHub</a>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">
+                Eleve seu negócio digital a outro nível 
+                <strong class="titulo-destaque">com um Front-end de qualidade!
+                </strong></h1>
+                <p class="apresentacao__conteudo__paragrafo">Olá! Sou Joana Santos, desenvolvedora 
+                Front-end com especialidade em <strong>React, HTML e
+                CSS</strong>. Ajudo pequenos negócios e designers a 
+                colocarem em prática boas ideias. Vamos 
+                conversar?</p>
+                <div class="apresentacao__links">
+                    <a href="https://instagram.com/rafaballerini">Instagram</a>
+                    <a href="https://github.com/guilhermeonrails">GitHub</a>
+                </div>
+        </section>
             <img src="./img/joana-santos-programando.png" alt="Foto da Joana Santos programando">
     </main>
     <footer></footer>
