--- a/Curso_de_HTML_e_CSS_cabecalho_footer_e_variaveis_CSS/portifolio/index.html
+++ b/Curso_de_HTML_e_CSS_cabecalho_footer_e_variaveis_CSS/portifolio/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="./styles/stylesheet.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="sobre_mim.html">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
@@ -20,13 +25,18 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">GitHub</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="https://github.com/"><img src="./img/github.png" alt="Imagem do logo do Github">GitHub</a>
+                <a class="apresentacao__links__link" href="https://br.linkedin.com/"><img src="./img/linkedin.png" alt="Imagem do logo do Linkedin">Linkedin</a>
+                <a class="apresentacao__links__link" href="https://www.twitch.tv/"><img src="./img/twitch.png" alt="Imagem do logo da Twitch">
+                Twitch</a>
             </div>
         </section>
         <img src="./img/joana-santos-programando.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Alura.</p>
+    </footer>
 </body>
 
 </html>
