--- a/Curso_de_HTML_e_CSS_cabecalho_footer_e_variaveis_CSS/portifolio/index.html
+++ b/Curso_de_HTML_e_CSS_cabecalho_footer_e_variaveis_CSS/portifolio/index.html
@@ -11,7 +11,8 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="sobre_mim.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="curriculum.html">Currículo</a>            
         </nav>
     </header>
     <main class="apresentacao">
